k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: yral-ai-chat
  namespace: yral-ai-chat
spec:
  selector:
    app: yral-ai-chat
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
